--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -119,6 +119,10 @@ jobs:
       #       --set gitea.admin.password=${GITEA_ADMIN_PASSWORD} \
       #       --wait
 
+      - name: Debugging with ssh
+        uses: lhotari/action-upterm@v1
+
+
       - name: Install Keptn
         id: install_keptn
         uses: keptn-sandbox/action-install-keptn@v2.0.0
