fix(actions): install helm-service - comment ssh container Signed-off-by: Suraj Banakar <surajrbanakar@gmail.com>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -141,6 +141,12 @@ jobs:
 
           KUBECONFIG: ${{ env.KUBECONFIG }}
 
+      - name: Install Keptn helm service
+        env:
+          KEPTN_VERSION: ${{ matrix.keptn-version }}
+        run: |
+          helm install helm install helm-service keptn/helm-service --version ${KEPTN_VERSION} --wait
+
       - name: Test connection to keptn
         run: |
           curl -X GET "${{ steps.install_keptn.outputs.KEPTN_API_URL }}/v1/metadata" -H  "accept: application/json" -H  "x-token: ${{ steps.install_keptn.outputs.KEPTN_API_TOKEN }}"
@@ -171,8 +177,8 @@ jobs:
 
 
       # # Uncomment this for debugging (`cd && touch continue` to continue execution of the workflow) 
-      - name: Debugging with ssh
-        uses: lhotari/action-upterm@v1
+      # - name: Debugging with ssh
+      #   uses: lhotari/action-upterm@v1
 
       - name: Run Integration tests
         env:
