fix(actions): comment out `Download artifacts` and `Dump k8s debug info` step Signed-off-by: Suraj Banakar <surajrbanakar@gmail.com>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -50,16 +50,16 @@ jobs:
         shell: bash
         run: go install gotest.tools/gotestsum@latest
 
-      # Download artifacts from last CI run
-      - name: Download artifacts
-        uses: dawidd6/action-download-artifact@v2.21.1
-        id: download_artifacts_push
-        with:
-          # Download last successful artifact from a CI build
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          workflow: CI.yml
-          branch: ${{ env.BRANCH }}
-          path: ./dist
+      # # Download artifacts from last CI run
+      # - name: Download artifacts
+      #   uses: dawidd6/action-download-artifact@v2.21.1
+      #   id: download_artifacts_push
+      #   with:
+      #     # Download last successful artifact from a CI build
+      #     github_token: ${{secrets.GITHUB_TOKEN}}
+      #     workflow: CI.yml
+      #     branch: ${{ env.BRANCH }}
+      #     path: ./dist
 
       # Prepare K3d + Keptn environment
       - name: Install and start K3s
@@ -200,22 +200,22 @@ jobs:
           name: test-report
           path: test-report-*.json
 
-      - name: Dump k8s debug info
-        if: always()
-        run: |
-          mkdir k8s_debug
-          kubectl describe nodes > k8s_debug/k8s_describe_nodes.txt
-          kubectl cluster-info dump > k8s_debug/k8s_cluster_info_dump.txt
-          kubectl get all -n keptn -o json > k8s_debug/k8s_keptn_objects.json
-          kubectl logs -n keptn -l app.kubernetes.io/instance=keptn --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_keptn_logs.txt || true
-          kubectl logs deployment/keptn-gitea-provisioner-service --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_gitea_provisioner_logs.txt || true
-          kubectl get statefulsets,configmaps,pods,networkpolicy,serviceaccounts,role,rolebindings,events,services -n ${GITEA_NAMESPACE} -o json > k8s_debug/k8s_objects_gitea.json
-          kubectl logs statefulsets/gitea --prefix=true --previous=false --all-containers -n ${GITEA_NAMESPACE} --tail=-1 > k8s_debug/k8s_logs_gitea.txt || true
-          kubectl logs -n keptn deployment/datadog-cluster-agent --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_datadog-cluster-agent_logs.txt || true
-          kubectl logs -n keptn deployment/datadog_kube_state_metrics --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_datadog_kube_state_metrics_logs.txt || true
-          kubectl logs -n keptn daemonset/datadog --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_datadog_logs.txt || true
-          kubectl logs -n keptn deployment/datadog-service --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_datadog_service_logs.txt || true
-          kubectl get all -n e2e-project-staging -o json > k8s_debug/k8s_e2e_project_objects.json
+      # - name: Dump k8s debug info
+      #   if: always()
+      #   run: |
+      #     mkdir k8s_debug
+      #     kubectl describe nodes > k8s_debug/k8s_describe_nodes.txt
+      #     kubectl cluster-info dump > k8s_debug/k8s_cluster_info_dump.txt
+      #     kubectl get all -n keptn -o json > k8s_debug/k8s_keptn_objects.json
+      #     kubectl logs -n keptn -l app.kubernetes.io/instance=keptn --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_keptn_logs.txt || true
+      #     kubectl logs deployment/keptn-gitea-provisioner-service --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_gitea_provisioner_logs.txt || true
+      #     kubectl get statefulsets,configmaps,pods,networkpolicy,serviceaccounts,role,rolebindings,events,services -n ${GITEA_NAMESPACE} -o json > k8s_debug/k8s_objects_gitea.json
+      #     kubectl logs statefulsets/gitea --prefix=true --previous=false --all-containers -n ${GITEA_NAMESPACE} --tail=-1 > k8s_debug/k8s_logs_gitea.txt || true
+      #     kubectl logs -n keptn deployment/datadog-cluster-agent --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_datadog-cluster-agent_logs.txt || true
+      #     kubectl logs -n keptn deployment/datadog_kube_state_metrics --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_datadog_kube_state_metrics_logs.txt || true
+      #     kubectl logs -n keptn daemonset/datadog --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_datadog_logs.txt || true
+      #     kubectl logs -n keptn deployment/datadog-service --prefix=true --previous=false --all-containers --tail=-1 > k8s_debug/k8s_datadog_service_logs.txt || true
+      #     kubectl get all -n e2e-project-staging -o json > k8s_debug/k8s_e2e_project_objects.json
           
 
       # Upload the k8s debug archive, so we can use it for investigating
