--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -23,6 +23,7 @@ jobs:
         # keptn-version: ["0.14.2", "0.15.1", "0.16.0", "0.17.0"] # https://github.com/keptn/keptn/releases
         keptn-version: ["0.15.1"] 
         datadog-version: ["2.37.0"]
+        prometheus-version: ["15.10.1"]
     env:
       GO_VERSION: 1.17
       GOPROXY: "https://proxy.golang.org"
@@ -169,6 +170,24 @@ jobs:
       #     DD_SITE: ${{ secrets.DD_SITE }}
       #   run: |
       #     helm install datadog-service ./helm --set datadogservice.ddApikey=${DD_API_KEY} --set datadogservice.ddAppKey=${DD_APP_KEY} --set datadogservice.ddSite=${DD_SITE} -nkeptn
+
+      - name: Install prometheus
+        env:
+          PROMETHEUS_VERSION: ${{ matrix.prometheus-version }}
+        run: |
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm install prometheus prometheus-community/prometheus \
+            --namespace ${PROMETHEUS_NAMESPACE} --create-namespace \
+            --version ${PROMETHEUS_VERSION}\
+            --wait
+
+      # - name: Install prometheus-service
+      #   run: |
+      #     ls -lah ./dist/helm-charts/
+      #     helm upgrade --install \
+      #       prometheus-service ./dist/helm-charts/prometheus-service-*.tgz \
+      #       -n keptn \
+      #       --wait
 
       # If we failed any previous step we might have a problem and not reporting anything for the version
       - name: Create pipeline failure report
