--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -171,6 +171,30 @@ jobs:
       #   run: |
       #     helm install datadog-service ./helm --set datadogservice.ddApikey=${DD_API_KEY} --set datadogservice.ddAppKey=${DD_APP_KEY} --set datadogservice.ddSite=${DD_SITE} -nkeptn
 
+      # Install job executor from downloaded helm chart
+      - name: Install Job-executor-service
+        env:
+          KEPTN_API_PROTOCOL: http
+          KEPTN_API_TOKEN: ${{ steps.install_keptn.outputs.KEPTN_API_TOKEN }}
+          KEPTN_ENDPOINT: ${{ steps.install_keptn.outputs.KEPTN_HTTP_ENDPOINT }}
+          TASK_SUBSCRIPTION: "sh.keptn.event.deployment.triggered\\,sh.keptn.event.test.triggered"
+        run: |
+          helm upgrade --install \
+            --create-namespace -n ${JES_NAMESPACE} \
+            job-executor-service \
+            "https://github.com/keptn-contrib/job-executor-service/releases/download/${JES_VERSION}/job-executor-service-${JES_VERSION}.tgz" \
+            --set remoteControlPlane.autoDetect.enabled="false" \
+            --set remoteControlPlane.topicSubscription=${TASK_SUBSCRIPTION} \
+            --set remoteControlPlane.api.token=${KEPTN_API_TOKEN} \
+            --set remoteControlPlane.api.hostname=${KEPTN_ENDPOINT} \
+            --set remoteControlPlane.api.protocol=${KEPTN_API_PROTOCOL} \
+            --wait
+          
+          kubectl apply \
+            -f test/data/helm-serviceAccount.yaml \
+            -f test/data/helm-clusterRole.yaml \
+            -f test/data/helm-clusterRoleBinding.yaml
+
       - name: Install prometheus
         env:
           PROMETHEUS_VERSION: ${{ matrix.prometheus-version }}
